--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -578,13 +578,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7EDme5RYCrt",
-        "cellView": "form"
+        "id": "g7EDme5RYCrt"
       },
       "source": [
         "#@title Actually do the run...\n",
         "\n",
         "# Delete memory from previous runs\n",
+        "!nvidia-smi -caa\n",
         "for var in ['device', 'model', 'perceptor', 'z']:\n",
         "  try:\n",
         "      del globals()[var]\n",
@@ -627,158 +627,165 @@
         "sideX, sideY = toksX * f, toksY * f\n",
         "z_min = model.quantize.embedding.weight.min(dim=0).values[None, :, None, None]\n",
         "z_max = model.quantize.embedding.weight.max(dim=0).values[None, :, None, None]\n",
+        "stop_on_next_loop = False  # Make sure GPU memory doesn't get corrupted from cancelling the run mid-way through, allow a full frame to complete\n",
         "\n",
         "for i in range(max_frames):\n",
-        "    if i == 0 and initial_image != \"\":\n",
-        "        img_0 = cv2.imread(initial_image)\n",
-        "        z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
-        "    elif i == 0 and not os.path.isfile(f'{working_dir}/steps/{i:04d}.png'):\n",
-        "        one_hot = F.one_hot(\n",
-        "            torch.randint(n_toks, [toksY * toksX], device=device), n_toks\n",
-        "        ).float()\n",
-        "        z = one_hot @ model.quantize.embedding.weight\n",
-        "        z = z.view([-1, toksY, toksX, e_dim]).permute(0, 3, 1, 2)\n",
-        "    else:\n",
-        "        if save_all_iterations:\n",
-        "            img_0 = cv2.imread(\n",
-        "                f'{working_dir}/steps/{i:04d}_{iterations_per_frame}.png')\n",
+        "    if stop_on_next_loop:\n",
+        "      break\n",
+        "    try:\n",
+        "        if i == 0 and initial_image != \"\":\n",
+        "            img_0 = cv2.imread(initial_image)\n",
+        "            z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
+        "        elif i == 0 and not os.path.isfile(f'{working_dir}/steps/{i:04d}.png'):\n",
+        "            one_hot = F.one_hot(\n",
+        "                torch.randint(n_toks, [toksY * toksX], device=device), n_toks\n",
+        "            ).float()\n",
+        "            z = one_hot @ model.quantize.embedding.weight\n",
+        "            z = z.view([-1, toksY, toksX, e_dim]).permute(0, 3, 1, 2)\n",
         "        else:\n",
-        "            # Hack to prevent colour inversion on every frame\n",
-        "            img_temp = cv2.imread(f'{working_dir}/steps/{i:04d}.png')\n",
-        "            imageio.imwrite('inverted_temp.png', img_temp)\n",
-        "            img_0 = cv2.imread('inverted_temp.png')\n",
-        "        center = (1*img_0.shape[1]//2, 1*img_0.shape[0]//2)\n",
-        "        trans_mat = np.float32(\n",
-        "            [[1, 0, translation_x],\n",
-        "             [0, 1, translation_y]]\n",
-        "        )\n",
-        "        rot_mat = cv2.getRotationMatrix2D( center, angle, zoom )\n",
-        "\n",
-        "        trans_mat = np.vstack([trans_mat, [0,0,1]])\n",
-        "        rot_mat = np.vstack([rot_mat, [0,0,1]])\n",
-        "        transformation_matrix = np.matmul(rot_mat, trans_mat)\n",
-        "\n",
-        "        img_0 = cv2.warpPerspective(\n",
-        "            img_0,\n",
-        "            transformation_matrix,\n",
-        "            (img_0.shape[1], img_0.shape[0]),\n",
-        "            borderMode=cv2.BORDER_REPLICATE\n",
-        "        )\n",
-        "        z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
-        "    i += 1\n",
-        "\n",
-        "    z_orig = z.clone()\n",
-        "    z.requires_grad_(True)\n",
-        "    opt = optim.Adam([z], lr=args.step_size)\n",
-        "\n",
-        "    normalize = transforms.Normalize(mean=[0.48145466, 0.4578275, 0.40821073],\n",
-        "                                    std=[0.26862954, 0.26130258, 0.27577711])\n",
-        "\n",
-        "    pMs = []\n",
-        "\n",
-        "    for prompt in args.prompts:\n",
-        "        txt, weight, stop = parse_prompt(prompt)\n",
-        "        embed = perceptor.encode_text(clip.tokenize(txt).to(device)).float()\n",
-        "        pMs.append(Prompt(embed, weight, stop).to(device))\n",
-        "\n",
-        "    for prompt in args.image_prompts:\n",
-        "        path, weight, stop = parse_prompt(prompt)\n",
-        "        img = resize_image(Image.open(path).convert('RGB'), (sideX, sideY))\n",
-        "        batch = make_cutouts(TF.to_tensor(img).unsqueeze(0).to(device))\n",
-        "        embed = perceptor.encode_image(normalize(batch)).float()\n",
-        "        pMs.append(Prompt(embed, weight, stop).to(device))\n",
-        "\n",
-        "    for seed, weight in zip(args.noise_prompt_seeds, args.noise_prompt_weights):\n",
-        "        gen = torch.Generator().manual_seed(seed)\n",
-        "        embed = torch.empty([1, perceptor.visual.output_dim]).normal_(generator=gen)\n",
-        "        pMs.append(Prompt(embed, weight).to(device))\n",
-        "\n",
-        "    def synth(z):\n",
-        "        z_q = vector_quantize(z.movedim(1, 3), model.quantize.embedding.weight).movedim(3, 1)\n",
-        "        return clamp_with_grad(model.decode(z_q).add(1).div(2), 0, 1)\n",
-        "\n",
-        "    def add_xmp_data(filename):\n",
-        "        imagen = ImgTag(filename=filename)\n",
-        "        imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'creator', 'VQGAN+CLIP', {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
-        "        if args.prompts:\n",
-        "            imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'title', \" | \".join(args.prompts), {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
-        "        else:\n",
-        "            imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'title', 'None', {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
-        "        imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'i', str(i), {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
-        "        imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'model', model_name, {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
-        "        imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'seed',str(seed) , {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
-        "        imagen.close()\n",
-        "\n",
-        "    def add_stegano_data(filename):\n",
-        "        data = {\n",
-        "            \"title\": \" | \".join(args.prompts) if args.prompts else None,\n",
-        "            \"notebook\": \"VQGAN+CLIP\",\n",
-        "            \"i\": i,\n",
-        "            \"model\": model_name,\n",
-        "            \"seed\": str(seed),\n",
-        "        }\n",
-        "        lsb.hide(filename, json.dumps(data)).save(filename)\n",
-        "\n",
-        "    @torch.no_grad()\n",
-        "    def checkin(i, losses):\n",
-        "        losses_str = ', '.join(f'{loss.item():g}' for loss in losses)\n",
-        "        tqdm.write(f'i: {i}, loss: {sum(losses).item():g}, losses: {losses_str}')\n",
-        "        out = synth(z)\n",
-        "        TF.to_pil_image(out[0].cpu()).save('progress.png')\n",
-        "        add_stegano_data('progress.png')\n",
-        "        add_xmp_data('progress.png')\n",
-        "        display.display(display.Image('progress.png'))\n",
-        "\n",
-        "    def save_output(i, img, suffix=None):\n",
-        "        filename = \\\n",
-        "            f\"{working_dir}/steps/{i:04}{'_' + suffix if suffix else ''}.png\"\n",
-        "        imageio.imwrite(filename, np.array(img))\n",
-        "        add_stegano_data(filename)\n",
-        "        add_xmp_data(filename)\n",
-        "\n",
-        "    def ascend_txt(i, save=True, suffix=None):\n",
-        "        out = synth(z)\n",
-        "        iii = perceptor.encode_image(normalize(make_cutouts(out))).float()\n",
-        "\n",
-        "        result = []\n",
-        "\n",
-        "        if args.init_weight:\n",
-        "            result.append(F.mse_loss(z, z_orig) * args.init_weight / 2)\n",
-        "\n",
-        "        for prompt in pMs:\n",
-        "            result.append(prompt(iii))\n",
-        "        img = np.array(out.mul(255).clamp(0, 255)[0].cpu().detach().numpy().astype(np.uint8))[:,:,:]\n",
-        "        img = np.transpose(img, (1, 2, 0))\n",
-        "        if save:\n",
-        "            save_output(i, img, suffix=suffix)\n",
-        "        return result\n",
-        "\n",
-        "    def train(i, save=True, suffix=None):\n",
-        "        opt.zero_grad()\n",
-        "        lossAll = ascend_txt(i, save=save, suffix=suffix)\n",
-        "        if i % args.display_freq == 0 and save:\n",
-        "            checkin(i, lossAll)\n",
-        "        loss = sum(lossAll)\n",
-        "        loss.backward()\n",
-        "        opt.step()\n",
-        "        with torch.no_grad():\n",
-        "            z.copy_(z.maximum(z_min).minimum(z_max))\n",
-        "\n",
-        "    with tqdm() as pbar:\n",
-        "        if iterations_per_frame == 0:\n",
-        "            save_output(i, img_0)\n",
-        "        j = 1\n",
-        "        while True:\n",
-        "            suffix = (str(j) if save_all_iterations else None)\n",
-        "            if j >= iterations_per_frame:\n",
-        "                train(i, save=True, suffix=suffix)\n",
-        "                break\n",
         "            if save_all_iterations:\n",
-        "                train(i, save=True, suffix=suffix)\n",
+        "                img_0 = cv2.imread(\n",
+        "                    f'{working_dir}/steps/{i:04d}_{iterations_per_frame}.png')\n",
         "            else:\n",
-        "                train(i, save=False, suffix=suffix)\n",
-        "            j += 1\n",
-        "            pbar.update()"
+        "                # Hack to prevent colour inversion on every frame\n",
+        "                img_temp = cv2.imread(f'{working_dir}/steps/{i:04d}.png')\n",
+        "                imageio.imwrite('inverted_temp.png', img_temp)\n",
+        "                img_0 = cv2.imread('inverted_temp.png')\n",
+        "            center = (1*img_0.shape[1]//2, 1*img_0.shape[0]//2)\n",
+        "            trans_mat = np.float32(\n",
+        "                [[1, 0, translation_x],\n",
+        "                [0, 1, translation_y]]\n",
+        "            )\n",
+        "            rot_mat = cv2.getRotationMatrix2D( center, angle, zoom )\n",
+        "\n",
+        "            trans_mat = np.vstack([trans_mat, [0,0,1]])\n",
+        "            rot_mat = np.vstack([rot_mat, [0,0,1]])\n",
+        "            transformation_matrix = np.matmul(rot_mat, trans_mat)\n",
+        "\n",
+        "            img_0 = cv2.warpPerspective(\n",
+        "                img_0,\n",
+        "                transformation_matrix,\n",
+        "                (img_0.shape[1], img_0.shape[0]),\n",
+        "                borderMode=cv2.BORDER_WRAP\n",
+        "            )\n",
+        "            z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
+        "        i += 1\n",
+        "\n",
+        "        z_orig = z.clone()\n",
+        "        z.requires_grad_(True)\n",
+        "        opt = optim.Adam([z], lr=args.step_size)\n",
+        "\n",
+        "        normalize = transforms.Normalize(mean=[0.48145466, 0.4578275, 0.40821073],\n",
+        "                                        std=[0.26862954, 0.26130258, 0.27577711])\n",
+        "\n",
+        "        pMs = []\n",
+        "\n",
+        "        for prompt in args.prompts:\n",
+        "            txt, weight, stop = parse_prompt(prompt)\n",
+        "            embed = perceptor.encode_text(clip.tokenize(txt).to(device)).float()\n",
+        "            pMs.append(Prompt(embed, weight, stop).to(device))\n",
+        "\n",
+        "        for prompt in args.image_prompts:\n",
+        "            path, weight, stop = parse_prompt(prompt)\n",
+        "            img = resize_image(Image.open(path).convert('RGB'), (sideX, sideY))\n",
+        "            batch = make_cutouts(TF.to_tensor(img).unsqueeze(0).to(device))\n",
+        "            embed = perceptor.encode_image(normalize(batch)).float()\n",
+        "            pMs.append(Prompt(embed, weight, stop).to(device))\n",
+        "\n",
+        "        for seed, weight in zip(args.noise_prompt_seeds, args.noise_prompt_weights):\n",
+        "            gen = torch.Generator().manual_seed(seed)\n",
+        "            embed = torch.empty([1, perceptor.visual.output_dim]).normal_(generator=gen)\n",
+        "            pMs.append(Prompt(embed, weight).to(device))\n",
+        "\n",
+        "        def synth(z):\n",
+        "            z_q = vector_quantize(z.movedim(1, 3), model.quantize.embedding.weight).movedim(3, 1)\n",
+        "            return clamp_with_grad(model.decode(z_q).add(1).div(2), 0, 1)\n",
+        "\n",
+        "        def add_xmp_data(filename):\n",
+        "            imagen = ImgTag(filename=filename)\n",
+        "            imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'creator', 'VQGAN+CLIP', {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
+        "            if args.prompts:\n",
+        "                imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'title', \" | \".join(args.prompts), {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
+        "            else:\n",
+        "                imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'title', 'None', {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
+        "            imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'i', str(i), {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
+        "            imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'model', model_name, {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
+        "            imagen.xmp.append_array_item(libxmp.consts.XMP_NS_DC, 'seed',str(seed) , {\"prop_array_is_ordered\":True, \"prop_value_is_array\":True})\n",
+        "            imagen.close()\n",
+        "\n",
+        "        def add_stegano_data(filename):\n",
+        "            data = {\n",
+        "                \"title\": \" | \".join(args.prompts) if args.prompts else None,\n",
+        "                \"notebook\": \"VQGAN+CLIP\",\n",
+        "                \"i\": i,\n",
+        "                \"model\": model_name,\n",
+        "                \"seed\": str(seed),\n",
+        "            }\n",
+        "            lsb.hide(filename, json.dumps(data)).save(filename)\n",
+        "\n",
+        "        @torch.no_grad()\n",
+        "        def checkin(i, losses):\n",
+        "            losses_str = ', '.join(f'{loss.item():g}' for loss in losses)\n",
+        "            tqdm.write(f'i: {i}, loss: {sum(losses).item():g}, losses: {losses_str}')\n",
+        "            out = synth(z)\n",
+        "            TF.to_pil_image(out[0].cpu()).save('progress.png')\n",
+        "            add_stegano_data('progress.png')\n",
+        "            add_xmp_data('progress.png')\n",
+        "            display.display(display.Image('progress.png'))\n",
+        "\n",
+        "        def save_output(i, img, suffix=None):\n",
+        "            filename = \\\n",
+        "                f\"{working_dir}/steps/{i:04}{'_' + suffix if suffix else ''}.png\"\n",
+        "            imageio.imwrite(filename, np.array(img))\n",
+        "            add_stegano_data(filename)\n",
+        "            add_xmp_data(filename)\n",
+        "\n",
+        "        def ascend_txt(i, save=True, suffix=None):\n",
+        "            out = synth(z)\n",
+        "            iii = perceptor.encode_image(normalize(make_cutouts(out))).float()\n",
+        "\n",
+        "            result = []\n",
+        "\n",
+        "            if args.init_weight:\n",
+        "                result.append(F.mse_loss(z, z_orig) * args.init_weight / 2)\n",
+        "\n",
+        "            for prompt in pMs:\n",
+        "                result.append(prompt(iii))\n",
+        "            img = np.array(out.mul(255).clamp(0, 255)[0].cpu().detach().numpy().astype(np.uint8))[:,:,:]\n",
+        "            img = np.transpose(img, (1, 2, 0))\n",
+        "            if save:\n",
+        "                save_output(i, img, suffix=suffix)\n",
+        "            return result\n",
+        "\n",
+        "        def train(i, save=True, suffix=None):\n",
+        "            opt.zero_grad()\n",
+        "            lossAll = ascend_txt(i, save=save, suffix=suffix)\n",
+        "            if i % args.display_freq == 0 and save:\n",
+        "                checkin(i, lossAll)\n",
+        "            loss = sum(lossAll)\n",
+        "            loss.backward()\n",
+        "            opt.step()\n",
+        "            with torch.no_grad():\n",
+        "                z.copy_(z.maximum(z_min).minimum(z_max))\n",
+        "\n",
+        "        with tqdm() as pbar:\n",
+        "            if iterations_per_frame == 0:\n",
+        "                save_output(i, img_0)\n",
+        "            j = 1\n",
+        "            while True:\n",
+        "                suffix = (str(j) if save_all_iterations else None)\n",
+        "                if j >= iterations_per_frame:\n",
+        "                    train(i, save=True, suffix=suffix)\n",
+        "                    break\n",
+        "                if save_all_iterations:\n",
+        "                    train(i, save=True, suffix=suffix)\n",
+        "                else:\n",
+        "                    train(i, save=False, suffix=suffix)\n",
+        "                j += 1\n",
+        "                pbar.update()\n",
+        "    except KeyboardInterrupt:\n",
+        "      stop_on_next_loop = True\n",
+        "      pass"
       ],
       "execution_count": null,
       "outputs": []
