--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -793,6 +793,46 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "YIsSFgtPw0Pc"
+      },
+      "source": [
+        "# Optional: SRCNN for increasing resolution"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HSJxMzXKtkTt"
+      },
+      "source": [
+        "!git clone https://github.com/Mirwaisse/SRCNN.git\n",
+        "!curl https://raw.githubusercontent.com/chigozienri/SRCNN/master/models/model_2x.pth -o model_2x.pth"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1iwOrcDbtndh"
+      },
+      "source": [
+        "# @title Create video\n",
+        "\n",
+        "init_frame = 1#@param {type:\"number\"}\n",
+        "last_frame = i#@param {type:\"number\"}\n",
+        "\n",
+        "!mkdir {working_dir}/srcnn\n",
+        "for i in range(init_frame,last_frame): #\n",
+        "    filename = f\"{i:04}.png\"\n",
+        "    !cd {working_dir}/steps && python /content/SRCNN/run.py --zoom_factor 2 --model /content/model_2x.pth --image {filename} --cuda"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "02ZbcWw5YYnU"
       },
       "source": [
@@ -804,8 +844,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mFo5vz0UYBrF",
-        "cellView": "form"
+        "id": "mFo5vz0UYBrF"
       },
       "source": [
         "# @title Create video\n",
@@ -867,6 +906,52 @@
         "# @title Download video\n",
         "from google.colab import files\n",
         "files.download(filepath)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g_0Gyi3E0HLW"
+      },
+      "source": [
+        "# Optional: Super-Slomo for smoothing movement"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cRbalqeLvy3y"
+      },
+      "source": [
+        "!git clone -q --depth 1 https://github.com/avinashpaliwal/Super-SloMo.git\n",
+        "\n",
+        "def download_from_google_drive(file_id, file_name):\n",
+        "  # download a file from the Google Drive link\n",
+        "  !rm -f ./cookie\n",
+        "  !curl -c ./cookie -s -L \"https://drive.google.com/uc?export=download&id={file_id}\" > /dev/null\n",
+        "  confirm_text = !awk '/download/ {print $NF}' ./cookie\n",
+        "  confirm_text = confirm_text[0]\n",
+        "  !curl -Lb ./cookie \"https://drive.google.com/uc?export=download&confirm={confirm_text}&id={file_id}\" -o {file_name}\n",
+        "  \n",
+        "pretrained_model = 'SuperSloMo.ckpt'\n",
+        "if not exists(pretrained_model):\n",
+        "  download_from_google_drive('1IvobLDbRiBgZr3ryCRrWL8xDbMZ-KnpF', pretrained_model)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2hT5Lhgs0gwe"
+      },
+      "source": [
+        "SLOW_MOTION_FACTOR = 3#@param {type:\"number\"}\n",
+        "TARGET_FPS = 12#@param {type:\"number\"}\n",
+        "slomo_filepath = filepath[:-4] + '-slomo'\n",
+        "!cd Super-SloMo && python video_to_slomo.py --ffmpeg {ffmpeg_path} --checkpoint ../{pretrained_model} --video {filepath} --sf {SLOW_MOTION_FACTOR} --fps {TARGET_FPS} --output {slomo_filepath + '.mkv'} && ffmpeg -i {slomo_filepath + '.mkv'} {slomo_filepath + '.mp4'}"
       ],
       "execution_count": null,
       "outputs": []
