--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -3,12 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Zooming VQGAN+CLIP (z+quantize method with additions).ipynb",
+      "name": "Copy of Zooming VQGAN+CLIP (z+quantize method with additions).ipynb",
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm",
-      "include_colab_link": true
+      "machine_shape": "hm"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,16 +19,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/gist/chigozienri/7c802ba40842914914494dc9d763c1e8/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -102,7 +91,7 @@
         "id": "fsubmNPc-pD0"
       },
       "source": [
-        "# working_dir = '/content'"
+        "working_dir = '/content'"
       ],
       "execution_count": null,
       "outputs": []
@@ -153,8 +142,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wSfISAhyPmyp",
-        "cellView": "form"
+        "id": "wSfISAhyPmyp"
       },
       "source": [
         "# @title Library installation\n",
@@ -231,8 +219,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EXMSuW2EQWsd",
-        "cellView": "form"
+        "id": "EXMSuW2EQWsd"
       },
       "source": [
         "# @title Loading of libraries and definitions\n",
@@ -243,6 +230,8 @@
         "import sys\n",
         "import os\n",
         "import cv2\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
         " \n",
         "sys.path.append('./taming-transformers')\n",
         "from IPython import display\n",
@@ -440,6 +429,7 @@
         "\n",
         "| Parameter  |  Usage |\n",
         "|---|---|\n",
+        "| `key_frames` | Whether to use key frames to change the parameters over the course of the run |\n",
         "|  `text_prompts` |  Text prompts, separated by \"\\|\" |\n",
         "| `width` | Width of the output, in pixels |\n",
         "| `height` | Height of the output, in pixels |\n",
@@ -478,49 +468,142 @@
         "\n",
         "You can also change the model by changing the line that says `model`. Currently 1024, 16384, WikiArt, S-FLCKR and COCO-Stuff are available. To activate them you have to have downloaded them first, and then you can simply select it.\n",
         "\n",
-        "You can also use `target_images`, which is basically putting one or more images on it that the AI will take as a \"target\", fulfilling the same function as putting text on it. To put more than one you have to use | as a separator."
+        "You can also use `target_images`, which is basically putting one or more images on it that the AI will take as a \"target\", fulfilling the same function as putting text on it. To put more than one you have to use | as a separator.\n",
+        "\n",
+        "------------\n",
+        "\n",
+        "Key Frames\n",
+        "\n",
+        "If `key_frames` is set to True, you are able to change the parameters over the course of the run.\n",
+        "To do this, put the parameters in in the following format:\n",
+        "10:(0.5), 20: (1.0), 35: (-1.0)\n",
+        "\n",
+        "This means at frame 10, the value should be 0.5, at frame 20 the value should be 1.0, and at frame 35 the value should be -1.0. The value at each other frame will be linearly interpolated (that is, before frame 10, the value will be 0.5, between frame 10 and 20 the value will increase frame-by-frame from 0.5 to 1.0, between frame 20 and 35 the value will decrease frame-by-frame from 1.0 to -1.0, and after frame 35 the value will be -1.0)\n",
+        "\n",
+        "This also works for text_prompts, e.g. 10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\n",
+        "will start with an Apple value of 1, once it hits frame 10 it will start decreasing in in Apple and increasing in Orange until it hits frame 20. Note that Peach will have a value of 1 the whole time.\n",
+        "\n",
+        "If `key_frames` is set to True, all of the parameters which can be key-framed must be entered in this format."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZdlpRFL8UAlW",
-        "cellView": "form"
+        "id": "ZdlpRFL8UAlW"
       },
       "source": [
         "#@title Parameters\n",
-        "text_prompts = \"Topographic Map | Contour Lines\" #@param {type:\"string\"}\n",
-        "width =  800#@param {type:\"number\"}\n",
+        "key_frames = True #@param {type:\"boolean\"}\n",
+        "text_prompts = \"0:(Winter: 1| Trending on Artstation: 1), 10:(Winter: 1| Spring: 0), 20: (Winter: 0| Spring: 1| Summer: 0), 30: (Spring: 0| Summer: 1|Autumn: 0), 40: (Summer: 0| Autumn: 1| Winter: 0), 50: (Autumn: 0| Winter: 1)\" #@param {type:\"string\"}\n",
+        "width =  450#@param {type:\"number\"}\n",
         "height =  450#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
         "interval =  1#@param {type:\"number\"}\n",
         "initial_image = \"\"#@param {type:\"string\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
-        "max_frames = 1000#@param {type:\"number\"}\n",
-        "angle = -5#@param {type:\"number\"}\n",
-        "zoom = 1.2#@param {type:\"number\"}\n",
-        "translation_x = 40#@param {type:\"number\"}\n",
-        "translation_y = 10#@param {type:\"number\"}\n",
-        "iterations_per_frame = 10#@param {type:\"number\"}\n",
+        "max_frames = 50#@param {type:\"number\"}\n",
+        "angle = \"0:(0)\"#@param {type:\"string\"}\n",
+        "zoom = \"0:(1.2)\"#@param {type:\"string\"}\n",
+        "translation_x = \"0:(-4)\"#@param {type:\"string\"}\n",
+        "translation_y = \"0:(-6)\"#@param {type:\"string\"}\n",
+        "iterations_per_frame = \"0:(10)\"#@param {type:\"string\"}\n",
         "save_all_iterations = False#@param {type:\"boolean\"}\n",
         "\n",
-        "model_names={\"vqgan_imagenet_f16_16384\": 'ImageNet 16384',\"vqgan_imagenet_f16_1024\":\"ImageNet 1024\", \n",
-        "                 \"wikiart_1024\":\"WikiArt 1024\", \"wikiart_16384\":\"WikiArt 16384\", \"coco\":\"COCO-Stuff\", \"faceshq\":\"FacesHQ\", \"sflckr\":\"S-FLCKR\"}\n",
+        "model_names={\n",
+        "    \"vqgan_imagenet_f16_16384\": 'ImageNet 16384',\n",
+        "    \"vqgan_imagenet_f16_1024\":\"ImageNet 1024\", \n",
+        "    \"wikiart_1024\":\"WikiArt 1024\",\n",
+        "    \"wikiart_16384\":\"WikiArt 16384\",\n",
+        "    \"coco\":\"COCO-Stuff\",\n",
+        "    \"faceshq\":\"FacesHQ\",\n",
+        "    \"sflckr\":\"S-FLCKR\"\n",
+        "}\n",
         "model_name = model_names[model]\n",
         "\n",
         "if seed == -1:\n",
         "    seed = None\n",
-        "if target_images == \"None\" or not target_images:\n",
-        "    target_images = []\n",
+        "\n",
+        "def parse_key_frames(string, prompt_parser=None):\n",
+        "    import re\n",
+        "    pattern = r'((?P<frame>[0-9]+):[\\s]*[\\(](?P<param>[\\S\\s]*?)[\\)])'\n",
+        "    frames = dict()\n",
+        "    for match_object in re.finditer(pattern, string):\n",
+        "        frame = int(match_object.groupdict()['frame'])\n",
+        "        param = match_object.groupdict()['param']\n",
+        "        if prompt_parser:\n",
+        "            frames[frame] = prompt_parser(param)\n",
+        "        else:\n",
+        "            frames[frame] = param\n",
+        "    return frames\n",
+        "\n",
+        "def get_inbetweens(key_frames, integer=False):\n",
+        "    key_frame_series = pd.Series([np.nan for a in range(max_frames)])\n",
+        "    for i, value in key_frames.items():\n",
+        "        key_frame_series[i] = value\n",
+        "    key_frame_series = key_frame_series.astype(float)\n",
+        "    key_frame_series = key_frame_series.interpolate(limit_direction='both')\n",
+        "    if integer:\n",
+        "        return key_frame_series.astype(int)\n",
+        "    return key_frame_series\n",
+        "\n",
+        "def split_key_frame_text_prompts(frames):\n",
+        "    prompt_dict = dict()\n",
+        "    for i, parameters in frames.items():\n",
+        "        prompts = parameters.split('|')\n",
+        "        for prompt in prompts:\n",
+        "            string, value = prompt.split(':')\n",
+        "            string = string.strip()\n",
+        "            value = float(value.strip())\n",
+        "            if string in prompt_dict:\n",
+        "                prompt_dict[string][i] = value\n",
+        "            else:\n",
+        "                prompt_dict[string] = {i: value}\n",
+        "    prompt_series_dict = dict()\n",
+        "    for prompt, values in prompt_dict.items():\n",
+        "        value_string = (\n",
+        "            ', '.join([f'{value}: ({values[value]})' for value in values])\n",
+        "        )\n",
+        "        prompt_series = get_inbetweens(parse_key_frames(value_string))\n",
+        "        prompt_series_dict[prompt] = prompt_series\n",
+        "    prompt_list = []\n",
+        "    for i in range(max_frames):\n",
+        "        prompt_list.append(\n",
+        "            ' | '.join(\n",
+        "                [f'{prompt}: {prompt_series_dict[prompt][i]}'\n",
+        "                 for prompt in prompt_series_dict]\n",
+        "            )\n",
+        "        )\n",
+        "    return prompt_list\n",
+        "\n",
+        "if key_frames:\n",
+        "    text_prompts_series = split_key_frame_text_prompts(\n",
+        "        parse_key_frames(text_prompts)\n",
+        "    )\n",
+        "    target_images_series = split_key_frame_text_prompts(\n",
+        "        parse_key_frames(target_images)\n",
+        "    )\n",
+        "    angle_series = get_inbetweens(parse_key_frames(angle))\n",
+        "    zoom_series = get_inbetweens(parse_key_frames(zoom))\n",
+        "    translation_x_series = get_inbetweens(parse_key_frames(translation_x))\n",
+        "    translation_y_series = get_inbetweens(parse_key_frames(translation_y))\n",
+        "    iterations_per_frame_series = get_inbetweens(\n",
+        "        parse_key_frames(iterations_per_frame), integer=True\n",
+        "    )\n",
         "else:\n",
-        "    target_images = target_images.split(\"|\")\n",
-        "    target_images = [image.strip() for image in target_images]\n",
-        "\n",
-        "text_prompts = [phrase.strip() for phrase in text_prompts.split(\"|\")]\n",
-        "if text_prompts == ['']:\n",
-        "    text_prompts = []\n",
-        "\n",
+        "    text_prompts = [phrase.strip() for phrase in text_prompts.split(\"|\")]\n",
+        "    if text_prompts == ['']:\n",
+        "        text_prompts = []\n",
+        "    if target_images == \"None\" or not target_images:\n",
+        "        target_images = []\n",
+        "    else:\n",
+        "        target_images = target_images.split(\"|\")\n",
+        "        target_images = [image.strip() for image in target_images]\n",
+        "    angle = float(angle)\n",
+        "    zoom = float(zoom)\n",
+        "    translation_x = float(translation_x)\n",
+        "    translation_y = float(translation_y)\n",
+        "    iterations_per_frame = int(iterations_per_frame)\n",
         "args = argparse.Namespace(\n",
         "    prompts=text_prompts,\n",
         "    image_prompts=target_images,\n",
@@ -537,6 +620,17 @@
         "    display_freq=interval,\n",
         "    seed=seed,\n",
         ")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mphNFnNDBDnM"
+      },
+      "source": [
+        "text_prompts_series"
       ],
       "execution_count": null,
       "outputs": []
@@ -604,10 +698,11 @@
         "\n",
         "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
         "print('Using device:', device)\n",
-        "if text_prompts:\n",
-        "    print('Using text prompts:', text_prompts)\n",
-        "if target_images:\n",
-        "    print('Using image prompts:', target_images)\n",
+        "if not key_frames:\n",
+        "    if text_prompts:\n",
+        "        print('Using text prompts:', text_prompts)\n",
+        "    if target_images:\n",
+        "        print('Using image prompts:', target_images)\n",
         "if args.seed is None:\n",
         "    seed = torch.seed()\n",
         "else:\n",
@@ -632,6 +727,34 @@
         "for i in range(max_frames):\n",
         "    if stop_on_next_loop:\n",
         "      break\n",
+        "    if key_frames:\n",
+        "        text_prompts = text_prompts_series[i]\n",
+        "        text_prompts = [phrase.strip() for phrase in text_prompts.split(\"|\")]\n",
+        "        if text_prompts == ['']:\n",
+        "            text_prompts = []\n",
+        "        args.prompts = text_prompts\n",
+        "\n",
+        "        target_images = target_images_series[i]\n",
+        "\n",
+        "        if target_images == \"None\" or not target_images:\n",
+        "            target_images = []\n",
+        "        else:\n",
+        "            target_images = target_images.split(\"|\")\n",
+        "            target_images = [image.strip() for image in target_images]\n",
+        "\n",
+        "        angle = angle_series[i]\n",
+        "        zoom = zoom_series[i]\n",
+        "        translation_x = translation_x_series[i]\n",
+        "        translation_y = translation_y_series[i]\n",
+        "        iterations_per_frame = iterations_per_frame_series[i]\n",
+        "        print(\n",
+        "            f'text_prompts: {text_prompts}'\n",
+        "            f'angle: {angle}',\n",
+        "            f'zoom: {zoom}',\n",
+        "            f'translation_x: {translation_x}',\n",
+        "            f'translation_y: {translation_y}',\n",
+        "            f'iterations_per_frame: {iterations_per_frame}'\n",
+        "        )\n",
         "    try:\n",
         "        if i == 0 and initial_image != \"\":\n",
         "            img_0 = cv2.imread(initial_image)\n",
