--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Zooming VQGAN+CLIP (z+quantize method with additions).ipynb",
+      "name": "Zooming VQGAN+CLIP (z+quantize method with additions).ipynb",
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
@@ -951,7 +951,7 @@
         "id": "1iwOrcDbtndh"
       },
       "source": [
-        "# @title Create video\n",
+        "# @title Increase Resolution\n",
         "\n",
         "init_frame = 1#@param {type:\"number\"}\n",
         "last_frame = i#@param {type:\"number\"}\n",
